--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint",
-    "check": "npm run lint && npm run test && npm run build"
+    "lint": "eslint"
   },
   "dependencies": {
     "next": "16.1.1",
