--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
           run: npm ci
 
         - name: Lint Code
-          run: npm lint
+          run: npm run lint
 
         - name: Run Unit Tests
           run: npm test
