--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,6 +24,9 @@ jobs:
 
         - name: Lint Code
           run: npm run lint
+
+        - name: Run Unit Tests
+          run: npm run test  
           
         - name: Build Project
           run: npm run build
